# dns-benchmark

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  labels.yml
.github/workflows/: ci.yml  labels.yml
docker/: Dockerfile  OVERVIEW.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/benchmark/: engine.rs  mod.rs  resolver.rs  result.rs
src/dns/: mod.rs  servers.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs  xml.rs
src/platform/: gateway.rs  mod.rs  system.rs
