[package]
name = "dns-benchmark"
version = "0.1.0"
edition = "2024"
authors = ["Mohammad Miadh Angkad <MAngkad.BSDSBA2027@aim.edu>"]
description = "A high-performance DNS benchmarking tool to find the fastest DNS servers for your location"
keywords = ["dns", "network", "cli", "benchmark", "performance"]
categories = ["network-programming", "command-line-utilities"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mmangkad/dns-benchmark"
homepage = "https://github.com/mmangkad/dns-benchmark"
readme = "README.md"
rust-version = "1.92.0"
include = ["src/**/*", "Cargo.*", "README.md", "LICENSE-*"]

[features]
default = []

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }

# DNS resolution
hickory-resolver = { version = "0.25", features = ["tokio"] }

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# Output formatting
tabled = { version = "0.20", features = ["ansi"] }
csv = "1.4"
quick-xml = { version = "0.39", features = ["serialize"] }

# Progress & terminal
indicatif = { version = "0.18", features = ["tokio"] }
console = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
directories = "6.0"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.24"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
